Thu Jan 25 17:26:52 UTC 2007  Ciju John  <johnc@ociweb.com>

        * tests/DCPS/FooTest3_0/SubDriver.cpp:
	  reenqueue_all test failing on oslo.phx due to pub-sub
          synchronization issues. Since we can't delay reenqueue messages
          the fix is to delay the Publisher invocation by 5 secs.

Wed Jan 24 16:02:58 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * dds\DCPS\transport\framework\DataLink.inl:

          Fixed a compilation error on vc6 build due to returning a value
          in a void return function.

Tue Jan 23 22:56:33 UTC 2007  Ciju John  <johnc@ociweb.com>

        * tests/DCPS/FooTest3_0/PubDriver.cpp:
          Reorder the last write such that the publisher and subscriber
          shutdown in a deterministic manner.

        * tests/DCPS/FooTest3_0/SimpleDataReader.cpp:
        * tests/DCPS/FooTest3_0/run_test.pl:
          Only count the publisher written messages, not the liveliness
          msgs.

Tue Jan 23 22:01:54 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * dds\DCPS\transport\simpleMCAST\SimpleMcastSynchResource.cpp:
        * dds\DCPS\transport\simpleMCAST\SimpleMcastTransport.h:
        * dds\DCPS\transport\simpleMCAST\SimpleMcastConfiguration.cpp:
        * dds\DCPS\transport\simpleMCAST\SimpleMcastConfiguration.inl:
        * dds\DCPS\transport\simpleMCAST\SimpleMcastTransport.cpp:
        * dds\DCPS\transport\simpleMCAST\SimpleMcastSynchResource.h:
        * dds\DCPS\transport\simpleMCAST\SimpleMcastConfiguration.h:
        * dds\DCPS\transport\simpleUDP\SimpleUdpConfiguration.h:
        * dds\DCPS\transport\simpleUDP\SimpleUdpSynchResource.cpp:
        * dds\DCPS\transport\simpleUDP\SimpleUdpTransport.h:
        * dds\DCPS\transport\simpleUDP\SimpleUdpConfiguration.cpp:
        * dds\DCPS\transport\simpleUDP\SimpleUdpConfiguration.inl:
        * dds\DCPS\transport\simpleUDP\SimpleUdpTransport.cpp:
        * dds\DCPS\transport\simpleUDP\SimpleUdpSynchResource.h:
        * dds\DCPS\transport\framework\DataLink.h: